# matplotlib-label-lines

./: .bumpversion.cfg  .coveragerc  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  Readme.md  dev_requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: publish-to-test-pypi.yml  pytest.yml
example/: matplotlib_label_lines.ipynb
labellines/: __init__.py  core.py  line_label.py  test.py  utils.py
