[build-system]
# See https://github.com/scipy/scipy/pull/10431 for the AIX issue.
requires = [
  "setuptools>=19.6",
  "wheel",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
filterwarnings = [
    "error",
]

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "C", "F", "U", "B", "A", "YTT", "S", "N"]
ignore = ["N802", "N806", "C901", "UP007"]
target-version = 'py38'

[tool.ruff.per-file-ignores]
"**/test*.py" = ["S101"]

[tool.ruff.isort]
combine-as-imports = true
known-first-party = ["labellines"]
known-third-party = [
  "numpy",
  "matplotlib",
]
