[build-system]
# See https://github.com/scipy/scipy/pull/10431 for the AIX issue.
requires = [
  "setuptools>=19.6",
  "wheel",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
filterwarnings = [
    "error",
]

[tool.ruff.lint]
ignore = ["N802", "N806", "C901", "UP007"]
select = ["E", "C", "F", "UP", "B", "A", "YTT", "S", "N"]


[tool.ruff.lint.per-file-ignores]
"**/test*.py" = ["S101"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["labellines"]
known-third-party = [
  "numpy",
  "matplotlib",
]
