[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matplotlib-label-lines"
dynamic = ["version"]
description = "Label lines in matplotlib."
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Corentin Cadiou", email = "contact@cphyc.me" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Matplotlib",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: AIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "matplotlib>=2.0.2",
    "more-itertools",
    "numpy>=1.16",
]

[project.optional-dependencies]
test = [
    "matplotlib==3.10.1",
    "pytest-cov==6.1.1",
    "pytest-mpl==0.17.0",
    "pytest==8.3.5",
]

[project.urls]
Homepage = "https://github.com/cphyc/matplotlib-label-lines"

[tool.hatch.version]
path = "labellines/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/labellines",
]
[tool.hatch.build.targets.wheel]
packages = [
    "labellines",
]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
]

[tool.ruff.lint]
ignore = ["N802", "N806", "C901", "UP007"]
select = ["E", "C", "F", "UP", "B", "A", "YTT", "S", "N"]


[tool.ruff.lint.per-file-ignores]
"**/test*.py" = ["S101"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["labellines"]
known-third-party = [
  "numpy",
  "matplotlib",
]
