[metadata]
name = matplotlib_label_lines
version = 0.4.3
description = Label lines in matplotlib.
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/cphyc/matplotlib-label-lines
author = Corentin Cadiou
author_email = contact@cphyc.me
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: Matplotlib
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: AIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    matplotlib>=2.0.2
    more-itertools
    numpy>=1.16
python_requires = >=3.7
include_package_data = True

[options.extras_require]
test =
    flake8==3.9.2
    flake8-black==0.2.1
    flake8-bugbear==21.4.3
    matplotlib==3.4.2
    pytest~=6.1.1
    pytest-cov==2.10.1
    pytest-mpl==0.12

[flake8]
max-line-length = 88
ignore = E203, # Whitespace before ':' (black compatibility)
    E231, # Missing whitespace after ',', ';', or ':'
    E266, # Too many leading '#' for block comment
    E302, # Expected 2 blank lines, found 0
    E306, # Expected 1 blank line before a nested definition
    E741, # Do not use variables named 'I', 'O', or 'l'
    W503, # Line break occurred before a binary operator (black compatibility)
    W605, # Invalid escape sequence 'x'
    B302, # this is a python 3 compatibility warning, not relevant since don't support python 2 anymore
jobs = 8
