[metadata]
name = matplotlib_label_lines
version = 0.7.0
description = Label lines in matplotlib.
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/cphyc/matplotlib-label-lines
author = Corentin Cadiou
author_email = contact@cphyc.me
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: Matplotlib
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: AIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    matplotlib>=2.0.2
    more-itertools
    numpy>=1.16
python_requires = >=3.8
include_package_data = True

[options.extras_require]
test =
    matplotlib==3.7.1
    pytest==7.3.1
    pytest-cov==4.0.0
    pytest-mpl==0.16.1
